<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    android:orientation="vertical"
    android:weightSum="1" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_marginRight="3dp"
        android:layout_weight=".2"
        android:background="@color/FireBrick"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:src="@drawable/logo_yo_bank2" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="@dimen/title_padding_left"
            android:text="@string/yo_bank" 
            android:textSize="32sp"
            android:textStyle="italic"
            android:textColor="@color/WhiteSmoke" 
             />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:layout_weight=".8"
        android:background="@color/DarkOrange"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1" >

        <Button
            android:id="@+id/activateBtn"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_weight=".13"
             android:background="@color/FireBrick"
            android:text="@string/activate"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="26sp" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_weight=".13"
             android:background="@color/FireBrick"
            android:text="@string/login"
            android:textColor="@color/White"
            android:textStyle="bold"
            android:textSize="26sp" />

        <Button
            android:id="@+id/helpBtn"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_weight=".13"
             android:background="@color/FireBrick"
            android:text="@string/help"
            android:textColor="@color/White"
            android:textStyle="bold"
            android:textSize="26sp" />

        <Button
            android:id="@+id/locate_usBtn"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_weight=".13"
             android:background="@color/FireBrick"
            android:text="@string/locate_us"
            android:textColor="@color/White"
            android:textStyle="bold"
            android:textSize="26sp" />

        <Button
            android:id="@+id/apply_nowBtn"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_weight=".13"
             android:background="@color/FireBrick"
            android:text="@string/apply_now"
            android:textColor="@color/White"
            android:textStyle="bold"
            android:textSize="26sp" />
    </LinearLayout>

</LinearLayout>